OC1 = OpenCart 1
OC2 = OpenCart 2 (OC21, OC22, OC23 = specifieke minor versie binnen major versie 2)
OC3 = OpenCart 3
PS  = PrestaShop
VM3 = VirtueMart3 (Joomla)
WC  = WooCommerce (WordPress) (alle ondersteunde versies, vanaf 5.5.2 is dat alleen nog WC3)
WC2 = WooCommerce 2 (WordPress)
WC3 = WooCommerce 3 (WordPress)

5.6.1 (2019-03-??)
------------------
Bugs:
- "property source" 'originalInvoiceOrder' in ere hersteld, deze info is af en
  toe toch nodig. Deze property verwijst nu naar de Acumulus wrapper om de
  (oorspronkelijke) order heen. NB: deze peroperty bestaat alleen in shops die
  creditfcturen ondersteunen.
- Het niet automatisch verzenden van een creditfactuur werd op een misleidende
  manier gelogd. Dit is nu vebeterd.

5.6.0 (2019-03-13)
------------------
Bugs:
- ALL: (but mostly WC) to retrieve vat rates based on vat classes, we normally
  need a country code. If no country code has been saved in the customer info,
  this might fail. so "completing" the country code (with nl as default) will
  now be done directly when retrieving the address data.
- WC: You can refund a fraction of an article (price) but Woocommerce will still
  store quantity as an integer rounded towards 0 (and thus possibly even 0). We
  now do accept this, but unit prices may be strange, though line totals should
  be correct.
- PS: Some of our database queries failed to run correctly with PS1.7.5 and/or
  PHP7.2.
- PS: PS 1.7.5 changed the log folder again.
- JOO: 'Error Library path src not found' on order status updates. No automatic
  sending of invoices to Acumulus has been possible since version 5.4.9...

Features:
- WC/MA/PS: (These are the web shops that do support credit notes.) Added a
  setting to define whether to automatically send credit invoices to Acumulus
  upon their creation.
- ALL: Added some validations to the configuration form.
- ALL: Improved some warning/error messages.

Refactoring: