@@ -20,12 +20,17 @@ WC3 = WooCommerce 3 (WordPress)
 5.6.1 (2019-03-??)
 ------------------
 Bugs:
+- Facturen voor klanten buiten de EU waar gewoon btw wordt geheven kregen niet
+  factuurtype 1 toegewezen.
 - "property source" 'originalInvoiceOrder' in ere hersteld, deze info is af en
   toe toch nodig. Deze property verwijst nu naar de Acumulus wrapper om de
   (oorspronkelijke) order heen. NB: deze peroperty bestaat alleen in shops die
   creditfcturen ondersteunen.
-- Het niet automatisch verzenden van een creditfactuur werd op een misleidende
-  manier gelogd. Dit is nu vebeterd.
+
+Features:
+- Het niet automatisch verzenden van een creditfactuur werd niet duidelijk
+  gelogd. Dit is nu vebeterd.
+- Een helptekst over factuurnummers verbeterd.
 
 5.6.0 (2019-03-13)
 ------------------
